Allow sorting by price and best_selling
